fix title overflow

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -11,7 +11,7 @@
 }
 
 .site-title {
-  @include relative-font-size(1.625);
+  @include relative-font-size(1.50);
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: 0px;
@@ -42,7 +42,7 @@
   }
 
   .page-link {
-    //color: $text-color;
+    //color: $turquoise-color-dark;
     color: $antiquewhite-color;
     //font-weight: bold;
     line-height: $base-line-height;
@@ -54,6 +54,7 @@
   }
 
   @include media-query($on-palm) {
+
     position: absolute;
     top: 9px;
     right: $spacing-unit / 2;
@@ -98,6 +99,7 @@
     .page-link {
       display: block;
       padding: 5px 10px;
+      color: $turquoise-color-dark;
 
       &:not(:last-child) {
         margin-right: 0;
